src/objects/pse__Resource_Request__c.object
<CustomObject>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>IQVIAPSA-3117 - OWF - Update SubGroup Sort Order for SubGroups</description>
        <formula>IF(ISPICKVAL(SubGroup__c,&apos;GBO-Lead PD&apos;),&apos;001: GBO-Lead PD&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;GBO-Bid Grid&apos;),&apos;002: GBO-Bid Grid&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;GBO-RFI&apos;),&apos;003: GBO-RFI&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;GBO-Strategic Writer&apos;),&apos;004: GBO-Strategic Writer&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;GBO-Support PD&apos;),&apos;005: GBO-Support PD&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;GBO-Lead Contracts Analyst&apos;),&apos;006: GBO-Lead Contracts Analyst&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;TSL&apos;),&apos;007: TSL&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;TSL-Japan&apos;),&apos;008: TSL-Japan&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;Medical-MSL&apos;),&apos;009: Medical-MSL&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;Biosimilar-COE&apos;),&apos;010: Biosimilar-COE&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;ECD-COE&apos;),&apos;011: ECD-COE&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;CAGT-COE&apos;),&apos;012: CAGT-COE&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;PRD-COE&apos;),&apos;013: PRD-COE&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;TAL&apos;),&apos;014: TAL&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;Feasibility Analytics&apos;),&apos;015: Feasibility Analytics&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;Site Analytics&apos;),&apos;016: Site Analytics&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;Design Analytics&apos;),&apos;018: Design Analytics&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;CP&amp;A-CA&amp;S&apos;),&apos;019: CP&amp;A-CA&amp;S&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;Global Analytics&apos;),&apos;020: Global Analytics&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;SPN Product Specialist&apos;),&apos;021: SPN Product Specialist&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-DM&apos;),&apos;022: DSB-DM&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-LCS&apos;),&apos;023: DSB-LCS&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-Bios&apos;),&apos;024: DSB-Bios&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-MW&apos;),&apos;025: DSB-MW&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-CEVA&apos;),&apos;026: DSB-CEVA&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-Clinical&apos;),&apos;027: DSB-Clinical&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-GSA&apos;),&apos;028: DSB-GSA&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;STS-Lead&apos;),&apos;029: STS-Lead&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;CTS-Lead&apos;),&apos;030: CTS-Lead&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;CTE-Lead&apos;),&apos;031: CTE-Lead&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-ISS&apos;),&apos;032: DSB-ISS&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-MM&apos;),&apos;033: DSB-MM&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-PM&apos;),&apos;034: DSB-PM&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;IG-Lead&apos;),&apos;035: IG-Lead&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;RW AIM&apos;),&apos;036: RW AIM&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-RADDS&apos;),&apos;037: DSB-RADDS&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-LCS Post&apos;),&apos;038: DSB-LCS Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-Clinical Post&apos;),&apos;039: DSB-Clinical Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-CEVA Post&apos;),&apos;040: DSB-CEVA Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-DCT Post&apos;),&apos;041: DSB-DCT Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-DM Post&apos;),&apos;042: DSB-DM Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-Bios Post&apos;),&apos;043: DSB-Bios Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-MW Post&apos;),&apos;044: DSB-MW Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-GSA Post&apos;),&apos;045: DSB-GSA Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-RNPS Post&apos;),&apos;046: DSB-RNPS Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-PM Post&apos;),&apos;047: DSB-PM Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-RADDS Post&apos;),&apos;048: DSB-RADDS Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-MM Post&apos;),&apos;049: DSB-MM Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-ISS Post&apos;),&apos;050: DSB-ISS Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;RADDS Lead PD&apos;),&apos;051: RADDS Lead PD&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-PK/PD Post&apos;),&apos;052: DSB-PK/PD Post&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;MedTech Strategy Lead&apos;),&apos;053: MedTech Strategy Lead&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;DSB-PK/PD&apos;),&apos;054: DSB-PK/PD&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;GBO-Support CA&apos;),&apos;055: GBO-Support CA&apos;,
IF(ISPICKVAL(SubGroup__c,&apos;MBR - Lead&apos;),&apos;056: MBR - Lead&apos;,
&apos;999: Others&apos;)))))))))))))))))))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sort Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubGroup__c</fullName>
        <description>OWF-MC-ESPSFDCQI-3042-This field is part of the OWF Process.</description>
        <label>SubGroup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIML Solutions</fullName>
                </value>
                <value>
                    <fullName>GBO-Lead PD</fullName>
                </value>
                <value>
                    <fullName>GBO-Bid Grid</fullName>
                </value>
                <value>
                    <fullName>GBO-RFI</fullName>
                </value>
                <value>
                    <fullName>GBO-Strategic Writer</fullName>
                </value>
                <value>
                    <fullName>GBO-Support CA</fullName>
                </value>
                <value>
                    <fullName>GBO-Support PD</fullName>
                </value>
                <value>
                    <fullName>GBO-Lead Contracts Analyst</fullName>
                </value>
                <value>
                    <fullName>TSL</fullName>
                </value>
                <value>
                    <fullName>TSL-Japan</fullName>
                </value>
                <value>
                    <fullName>Medical-MSL</fullName>
                </value>
                <value>
                    <fullName>Biosimilar-COE</fullName>
                </value>
                <value>
                    <fullName>ECD-COE</fullName>
                </value>
                <value>
                    <fullName>CAGT-COE</fullName>
                </value>
                <value>
                    <fullName>PRD-COE</fullName>
                </value>
                <value>
                    <fullName>TAL</fullName>
                </value>
                <value>
                    <fullName>Feasibility Analytics</fullName>
                </value>
                <value>
                    <fullName>Site Analytics</fullName>
                </value>
                <value>
                    <fullName>Design Analytics</fullName>
                </value>
                <value>
                    <fullName>Global Analytics</fullName>
                </value>
                <value>
                    <fullName>SPN Product Specialist</fullName>
                </value>
                <value>
                    <fullName>DSB-DM</fullName>
                </value>
                <value>
                    <fullName>DSB-LCS</fullName>
                </value>
                <value>
                    <fullName>DSB-Bios</fullName>
                </value>
                <value>
                    <fullName>DSB-MW</fullName>
                </value>
                <value>
                    <fullName>DSB-CEVA</fullName>
                </value>
                <value>
                    <fullName>DSB-Clinical</fullName>
                </value>
                <value>
                    <fullName>DSB-GSA</fullName>
                </value>
                <value>
                    <fullName>STS-Lead</fullName>
                </value>
                <value>
                    <fullName>CTS-Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Group__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <label>Sub Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_FTE__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <label>Suggested FTE</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Therapy_Area__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <formula>pse__Project__r.Bid_History__r.Bid_History_Related_Opportunity__r.Therapy_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Therapy Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Win_Probability__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2247</description>
        <formula>TEXT( pse__Opportunity__r.Path_Probability__c )</formula>
        <label>Win Probability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workload_Ranking__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2896-This field is part of the OWF Process.</description>
        <label>Workload Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>psa_report__Project_Name__c</fullName>
        <formula>pse__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psaws__Close_To_Start_Date__c</fullName>
        <formula>pse__Start_Date__c &lt;= TODAY() + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close To Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>psaws__Project_Manager_Is_Current_User__c</fullName>
        <formula>pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__c  = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Is Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>psaws__Requires_Staffing__c</fullName>
        <formula>ISPICKVAL(pse__Status__c, &apos;Ready to Staff&apos;) || ISPICKVAL(pse__Status__c, &apos;Hold&apos;) || ISPICKVAL(pse__Status__c, &apos;Tentative&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Staffing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__AccountId__c</fullName>
        <description>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</description>
        <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=&apos;&apos;)),
pse__Opportunity__r.AccountId,
IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=&apos;&apos;)),pse__Project__r.pse__Account__c,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Id of the Account associated with the related Opportunity, if one exists; otherwise, the Id of the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Account_Link__c</fullName>
        <description>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</description>
        <formula>IF(ISNULL(pse__AccountId__c),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__AccountId__c, IF(ISNULL(pse__Account__c),pse__AccountId__c,pse__Account__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the Account associated with the related Opportunity, if one exists; otherwise, a link to the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Account__c</fullName>
        <description>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</description>
        <formula>IF(AND(NOT(ISNULL(pse__Opportunity__c)),NOT(pse__Opportunity__c=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.AccountId)),NOT(pse__Opportunity__r.AccountId=&apos;&apos;),NOT(ISNULL(pse__Opportunity__r.Account.Name)),NOT(ISBLANK(pse__Opportunity__r.Account.Name))),pse__Opportunity__r.Account.Name,
				 IF(AND(NOT(ISNULL(pse__Project__c)),NOT(pse__Project__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__c)),NOT(pse__Project__r.pse__Account__c=&apos;&apos;),NOT(ISNULL(pse__Project__r.pse__Account__r.Name)),NOT(ISBLANK(pse__Project__r.pse__Account__r.Name))),pse__Project__r.pse__Account__r.Name,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Name of the Account associated with the related Opportunity, if one exists; otherwise, the Name of the Account associated with the related Project, if one exists.</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Allow_Candidates_to_Self_Nominate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, allows prospective candidates to view this resource request and express interest. An assignment is not created.</description>
        <inlineHelpText>If selected, allows prospective candidates to view this resource request and express interest. An assignment is not created.</inlineHelpText>
        <label>Allow Candidates to Self-Nominate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
        <label>Average Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Number__c</fullName>
        <label>Average Cost Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Schedule_Recalculation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Schedule Recalculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_From_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, this resource request is excluded from utilization calculations.</description>
        <inlineHelpText>If selected, this resource request is excluded from utilization calculations.</inlineHelpText>
        <label>Exclude from Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Planners__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, excludes the resource request from Work Planners and from the
		Resource and Project Planners. Any excluded resource requests are omitted from totals
		calculations in all planners and from color coding in the Resource and Project Planners.</description>
        <inlineHelpText>When selected, excludes the resource request from the Resource and Project Planners. Any excluded resource requests are not included in totals calculations and color coding in Planners.</inlineHelpText>
        <label>Exclude from Planners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Information_for_Prospective_Candidates__c</fullName>
        <description>Details to help prospective candidates decide whether to self-nominate for this resource request.</description>
        <inlineHelpText>Details to help prospective candidates decide whether to self-nominate for this resource request.</inlineHelpText>
        <label>Information for Prospective Candidates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Latitude_PSA__c</fullName>
        <label>Latitude (PSA)</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Longitude_PSA__c</fullName>
        <label>Longitude (PSA)</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only selected project&apos;s milestones are shown. To display all Milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Probability__c</fullName>
        <formula>pse__Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Allocated__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the percentage that this resource should be allocated to the project.</inlineHelpText>
        <label>Percent Allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Bill_Rate__c</fullName>
        <description>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</description>
        <inlineHelpText>This field is the bill rate used during the planning activities for an assignment to assess potential value. It is mainly used for fixed price projects where the actual bill rate is 0</inlineHelpText>
        <label>Planned Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Preferred_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Schedule</label>
        <referenceTo>pse__Schedule__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Skill_Certification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not intended for direct entry - controlled by the primary flag on the related skills / certifications.</inlineHelpText>
        <label>Primary Skill or Certification</label>
        <referenceTo>pse__Skill__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Skill_Minimum_Rating__c</fullName>
        <description>Added to simplify reports. Not intended for editing.</description>
        <label>Primary Skill Minimum Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Processing_Stage__c</fullName>
        <description>If set, this indicates the current processing stage of the resource request.</description>
        <inlineHelpText>If set, this indicates the current processing stage of the resource request.</inlineHelpText>
        <label>Processing Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible for Auto-Assign</fullName>
                </value>
                <value>
                    <fullName>Auto-Assign Initiated</fullName>
                </value>
                <value>
                    <fullName>Auto-Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Rate_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Card</label>
        <referenceTo>pse__Rate_Card__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Related_Resource_Request_Staffed_On__c</fullName>
        <description>Date and time on which a resource request in the same resource request set was staffed.</description>
        <inlineHelpText>Date and time on which a resource request in the same resource request set was staffed.</inlineHelpText>
        <label>Related Resource Request Staffed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Request_Billable_Amount__c</fullName>
        <formula>pse__Requested_Bill_Rate__c *  pse__SOW_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Request_Priority__c</fullName>
        <label>Request Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Requested_Bill_Rate__c</fullName>
        <inlineHelpText>Request an hourly bill rate</inlineHelpText>
        <label>Requested Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resource Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Name__c</fullName>
        <label>Resource Request Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related resource request set.</description>
        <inlineHelpText>Lookup to the related resource request set.</inlineHelpText>
        <label>Resource Request Set</label>
        <referenceTo>pse__Resource_Request_Set__c</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Coordinator</fullName>
                </value>
                <value>
                    <fullName>Functional Lead</fullName>
                </value>
                <value>
                    <fullName>Line Manager</fullName>
                </value>
                <value>
                    <fullName>Medical Safety Advisor</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>QPPV or Deputy</fullName>
                </value>
                <value>
                    <fullName>Service Line Lead</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Specialist - Junior</fullName>
                </value>
                <value>
                    <fullName>Specialist - Senior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Suggest a resource to use</inlineHelpText>
        <label>Suggested Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests</relationshipLabel>
        <relationshipName>Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__SOW_Hours__c</fullName>
        <inlineHelpText>Requested hours for this resource request.</inlineHelpText>
        <label>Requested Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Self_Nomination_Deadline__c</fullName>
        <description>The closing date for self-nominations.</description>
        <inlineHelpText>The closing date for self-nominations.</inlineHelpText>
        <label>Self-Nomination Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Staffed_Related_Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related resource request, which is staffed.</description>
        <inlineHelpText>Lookup to the related resource request, which is staffed.</inlineHelpText>
        <label>Staffed Related Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Resource Requests (Staffed Related Resource Request)</relationshipLabel>
        <relationshipName>Resource_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staffer Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Staffer_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This resource will be picked by Staffer for this resource request.</description>
        <label>Resource</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only active resources are shown. To display all resources, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Requests (Staffer Resource)</relationshipLabel>
        <relationshipName>Resource_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready to Staff</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Suggested_Bill_Rate_Currency_Code__c</fullName>
        <label>Suggested Bill Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
</CustomObject>